Networking/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort

# access from inside cluster same namespace:    http://nginx-service
#                                               http://nginx-service.default
# 
# access from inside cluster another namespace: http://nginx-service.default.svc.cluster.local
